# docpy

./: README.md  TODO  pyproject.toml
docpy/: api.py  app.py  appointment.py  db.py  db_model.py  manager.py  registrar.py  utils.py
docpy/apis/: __init__.py  appointment.py  user.py
docpy/core/: db.py  db_model.py  manager.py  registrar.py  utils.py
tests/: test_docpy.py
